--- a/sample_app/app/views/todolists/index.html.erb
+++ b/sample_app/app/views/todolists/index.html.erb
@@ -10,5 +10,9 @@
 
     	<span>
 
+    	<p>画像</p>
+
+    	<%= attachment_image_tag list, :image, format: 'jpeg', size: "100*100" %>
+
 
     <% end %>
